--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ html,body{
     justify-content: center;
     width: 450px; /* Ajusta el ancho máximo al 100% */
     height: 200px; /* Mantiene la proporción de aspecto */
-    background-image: auto;
+    /*background-image: auto;*/
     padding-top: 10px;  
     border-radius: 20px;
   }
@@ -547,7 +547,7 @@ html,body{
       display: grid;
       justify-content: center;
       text-align: center;
-      background-color: #000080;
+      background-color: #0000;
       color:white;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
       font-size: large;
